--- a/index.html
+++ b/index.html
@@ -4,9 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>YouTube</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header></header>
+    <main>
+        <section class="video-player">video-player</section>
+        <section class="video-info">video-info</section>
+        <section class="actions">actions</section>
+        <section class="channel">channel</section>
+        <section class="subscribe">subscribe</section>
+        <section class="ad">ad</section>
+        <section class="up-next">up-next</section>
+    </main>
 </body>
 </html>
