--- a/index.html
+++ b/index.html
@@ -1,16 +1,36 @@
 <!DOCTYPE html>
 <html lang="pt">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>YouTube</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
+
 <body>
-    <header></header>
+    <header>
+        <div class="logo">
+            <img src="images/youtube.png">
+        </div>
+
+        <div class="search">
+            <input type="search" placeholder="Pesquisar">
+        </div>
+
+        <div class="sing-in">
+            <a href="#" class="button">Fazer login</a>
+        </div>
+
+    </header>
     <main>
-        <section class="video-player">video-player</section>
+        <section class="video-player">
+            <iframe src="https://www.youtube.com/embed/mtpfmjkBFuE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </section>
+
         <section class="video-info">video-info</section>
         <section class="actions">actions</section>
         <section class="channel">channel</section>
@@ -19,4 +39,5 @@
         <section class="up-next">up-next</section>
     </main>
 </body>
+
 </html>
