--- a/index.html
+++ b/index.html
@@ -72,7 +72,9 @@
                 <p class="channel-description">Estudando programação!</p>
             </div>
         </section>
-        <section class="subscribe">subscribe</section>
+        <section class="subscribe">
+            <a href="https://www.linkedin.com/in/maria-carolina-s-n-xavier-05340b191/" class="button">Inscreva-se</a>
+        </section>
         <section class="ad">ad</section>
         <section class="up-next">up-next</section>
     </main>
