Área de vídeos recomendados

--- a/index.html
+++ b/index.html
@@ -76,7 +76,49 @@
             <a href="https://www.linkedin.com/in/maria-carolina-s-n-xavier-05340b191/" class="button">Inscreva-se</a>
         </section>
         <section class="ad">#programeSeuFuturo</section>
-        <section class="up-next">up-next</section>
+        <section class="up-next">
+            <a href="https://www.youtube.com/watch?v=fIhMZilnYBU&ab_channel=Budah-Topic">
+                <img src="https://img.youtube.com/vi/%3CYGWGHz-yhfU&ab%3E/maxresdefault.jpg" alt="Tumbnail">
+                <div class="video-details">
+                    <h4>Licor</h4>
+                    <p>Budah</p>
+                </div>
+            </a>
+
+            <a href="https://www.youtube.com/watch?v=fIhMZilnYBU&ab_channel=Budah-Topic">
+                <img src="https://img.youtube.com/vi/%3CYGWGHz-yhfU&ab%3E/maxresdefault.jpg" alt="Tumbnail">
+                <div class="video-details">
+                    <h4>Licor</h4>
+                    <p>Budah</p>
+                </div>
+            </a>
+
+            <a href="https://www.youtube.com/watch?v=fIhMZilnYBU&ab_channel=Budah-Topic">
+                <img src="https://img.youtube.com/vi/%3CYGWGHz-yhfU&ab%3E/maxresdefault.jpg" alt="Tumbnail">
+                <div class="video-details">
+                    <h4>Licor</h4>
+                    <p>Budah</p>
+                </div>
+            </a>
+
+            <a href="https://www.youtube.com/watch?v=fIhMZilnYBU&ab_channel=Budah-Topic">
+                <img src="https://img.youtube.com/vi/%3CYGWGHz-yhfU&ab%3E/maxresdefault.jpg" alt="Tumbnail">
+                <div class="video-details">
+                    <h4>Licor</h4>
+                    <p>Budah</p>
+                </div>
+            </a>
+
+            <a href="https://www.youtube.com/watch?v=fIhMZilnYBU&ab_channel=Budah-Topic">
+                <img src="https://img.youtube.com/vi/%3CYGWGHz-yhfU&ab%3E/maxresdefault.jpg" alt="Tumbnail">
+                <div class="video-details">
+                    <h4>Licor</h4>
+                    <p>Budah</p>
+                </div>
+            </a>
+
+            
+        </section>
     </main>
 </body>
 
