Clone YouTube - Concluído!

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <img src="images/youtube.png">
         </div>
 
-        <div class="search">
+        <div class="pesquisar">
             <input type="search" placeholder="Pesquisar">
         </div>
 
@@ -28,12 +28,12 @@
     </header>
     <main>
         <section class="video-player">
-            <iframe src="https://www.youtube.com/embed/mtpfmjkBFuE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/JqFIqEK3G1c" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </section>
 
         <section class="video-info">
-            <h1>Diz - Dequesa</h1>
-            <p class="views">18.525 visualizações</p>
+            <h1>ESTUDE APENAS O SUFICIENTE</h1>
+            <p class="views">2.408 visualizações</p>
         </section>
 
         <section class="actions">
@@ -69,55 +69,95 @@
             <div class="channel-info">
                 <h4 class="channel-name">Lucas Caton</h4>
                 <p class="date">Publicado em 2022</p>
-                <p class="channel-description">Estudando programação!</p>
+                <p class="channel-description">Estudando programação!</p><br>
+                <p class="channel-description">Conheça meu site: https://www.lucascaton.com.br/</p>
             </div>
         </section>
         <section class="subscribe">
-            <a href="https://www.linkedin.com/in/maria-carolina-s-n-xavier-05340b191/" class="button">Inscreva-se</a>
+            <a href="https://www.linkedin.com/in/maria-carolina-s-n-xavier-05340b191/" class="button">Inscrever-se</a>
         </section>
         <section class="ad">#programeSeuFuturo</section>
         <section class="up-next">
-            <a href="https://www.youtube.com/watch?v=fIhMZilnYBU&ab_channel=Budah-Topic">
-                <img src="https://img.youtube.com/vi/%3CYGWGHz-yhfU&ab%3E/maxresdefault.jpg" alt="Tumbnail">
+            <a href="https://www.youtube.com/watch?v=U4M-GThJb8I">
+                <img src="https://img.youtube.com/vi/U4M-GThJb8I/maxresdefault.jpg" alt="Tumbnail">
                 <div class="video-details">
-                    <h4>Licor</h4>
-                    <p>Budah</p>
+                    <h4>COMO ATUALIZAR UM PROJETO PARA RAILS 6</h4>
+                    <p>Lucas Caton</p>
                 </div>
             </a>
 
-            <a href="https://www.youtube.com/watch?v=fIhMZilnYBU&ab_channel=Budah-Topic">
-                <img src="https://img.youtube.com/vi/%3CYGWGHz-yhfU&ab%3E/maxresdefault.jpg" alt="Tumbnail">
+            <a href="https://www.youtube.com/watch?v=thcXWRKWGuw">
+                <img src="https://img.youtube.com/vi/thcXWRKWGuw/maxresdefault.jpg" alt="Tumbnail">
                 <div class="video-details">
-                    <h4>Licor</h4>
-                    <p>Budah</p>
+                    <h4>VOCÊ ESTÁ PRONTO PARA O MERCADO DE PROGRAMAÇÃO? - PERGUNTAS & RESPOSTAS (AO VIVO)</h4>
+                    <p>Lucas Caton</p>
                 </div>
             </a>
 
-            <a href="https://www.youtube.com/watch?v=fIhMZilnYBU&ab_channel=Budah-Topic">
-                <img src="https://img.youtube.com/vi/%3CYGWGHz-yhfU&ab%3E/maxresdefault.jpg" alt="Tumbnail">
+            <a href="https://www.youtube.com/watch?v=Q80PoxkiHuo">
+                <img src="https://img.youtube.com/vi/Q80PoxkiHuo/maxresdefault.jpg" alt="Tumbnail">
                 <div class="video-details">
-                    <h4>Licor</h4>
-                    <p>Budah</p>
+                    <h4>COMO LER UM LIVRO RENDEU UMA VAGA NA REDHAT - Série "Programe Seu Futuro" #01</h4>
+                    <p>Lucas Caton</p>
                 </div>
             </a>
 
-            <a href="https://www.youtube.com/watch?v=fIhMZilnYBU&ab_channel=Budah-Topic">
-                <img src="https://img.youtube.com/vi/%3CYGWGHz-yhfU&ab%3E/maxresdefault.jpg" alt="Tumbnail">
+            <a href="https://www.youtube.com/watch?v=_FjRDFbbKqE">
+                <img src="https://img.youtube.com/vi/_FjRDFbbKqE/maxresdefault.jpg" alt="Tumbnail">
                 <div class="video-details">
-                    <h4>Licor</h4>
-                    <p>Budah</p>
+                    <h4>DOCKER & CONTAINERS: PORQUE VOCÊ DEVERIA CONHECER</h4>
+                    <p>Lucas Caton</p>
                 </div>
             </a>
 
-            <a href="https://www.youtube.com/watch?v=fIhMZilnYBU&ab_channel=Budah-Topic">
-                <img src="https://img.youtube.com/vi/%3CYGWGHz-yhfU&ab%3E/maxresdefault.jpg" alt="Tumbnail">
+            <a href="https://www.youtube.com/watch?v=xZcwB_cVtrI">
+                <img src="https://img.youtube.com/vi/xZcwB_cVtrI/maxresdefault.jpg" alt="Tumbnail">
                 <div class="video-details">
-                    <h4>Licor</h4>
-                    <p>Budah</p>
+                    <h4>CONSCIÊNCIA ANTES DE EXCELENCIA</h4>
+                    <p>Lucas Caton</p>
                 </div>
             </a>
 
-            
+            <a href="https://www.youtube.com/watch?v=U4M-GThJb8I">
+                <img src="https://img.youtube.com/vi/U4M-GThJb8I/maxresdefault.jpg" alt="Tumbnail">
+                <div class="video-details">
+                    <h4>COMO ATUALIZAR UM PROJETO PARA RAILS 6</h4>
+                    <p>Lucas Caton</p>
+                </div>
+            </a>
+
+            <a href="https://www.youtube.com/watch?v=thcXWRKWGuw">
+                <img src="https://img.youtube.com/vi/thcXWRKWGuw/maxresdefault.jpg" alt="Tumbnail">
+                <div class="video-details">
+                    <h4>VOCÊ ESTÁ PRONTO PARA O MERCADO DE PROGRAMAÇÃO? - PERGUNTAS & RESPOSTAS (AO VIVO)</h4>
+                    <p>Lucas Caton</p>
+                </div>
+            </a>
+
+            <a href="https://www.youtube.com/watch?v=Q80PoxkiHuo">
+                <img src="https://img.youtube.com/vi/Q80PoxkiHuo/maxresdefault.jpg" alt="Tumbnail">
+                <div class="video-details">
+                    <h4>COMO LER UM LIVRO RENDEU UMA VAGA NA REDHAT - Série "Programe Seu Futuro" #01</h4>
+                    <p>Lucas Caton</p>
+                </div>
+            </a>
+
+            <a href="https://www.youtube.com/watch?v=_FjRDFbbKqE">
+                <img src="https://img.youtube.com/vi/_FjRDFbbKqE/maxresdefault.jpg" alt="Tumbnail">
+                <div class="video-details">
+                    <h4>DOCKER & CONTAINERS: PORQUE VOCÊ DEVERIA CONHECER</h4>
+                    <p>Lucas Caton</p>
+                </div>
+            </a>
+
+            <a href="https://www.youtube.com/watch?v=xZcwB_cVtrI">
+                <img src="https://img.youtube.com/vi/xZcwB_cVtrI/maxresdefault.jpg" alt="Tumbnail">
+                <div class="video-details">
+                    <h4>CONSCIÊNCIA ANTES DE EXCELENCIA</h4>
+                    <p>Lucas Caton</p>
+                </div>
+            </a>
+
         </section>
     </main>
 </body>
